--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8"
   },
   "devDependencies": {
